# UXP1A

./: .gitignore  CMakeLists.txt
src/: Logger.cpp  Logger.h  SynchronizedIO.cpp  SynchronizedIO.h  main.cpp
src/LindaLang/: CMakeLists.txt  ConditionVis.h  Conditions.h  DetailedValue.cpp  DetailedValue.h  Enums.h  Linda.cpp  Linda.h  LindaLogger.cpp  LindaLogger.h  Message.cpp  Message.h  Pipe.cpp  Pipe.h  Tuple.cpp  Tuple.h  TupleGenerator.cpp  TupleGenerator.h  TuplePattern.cpp  TuplePattern.h  TuplePatternValue.cpp  TuplePatternValue.h  TupleValVisitors.cpp  TupleValVisitors.h  TupleValue.cpp  TupleValue.h  Value.cpp  Value.h
src/client/: Client.cpp  Client.h
src/server/: Server.cpp  Server.h  TupleSpace.cpp  TupleSpace.h
test/: CMakeLists.txt  LindaLangTests.cpp
